# Mystudy

./: .bashrc  .gitconfig  .gitignore  .screenrc  .vimrc
.vim/: .VimballRecord  .netrwhist
.vim/doc/: tags
.vim/ftplugin/: esqlc.vim  proc.vim
.vim/plugin/: code_complete.vim  cppcomplete.vim  lookupfile.vim  taglist.vim
.vim/skel/: dot.c  dot.cpp  dot.ec  dot.h  dot.html  dot.pc
.vim/syntax/: c.vim
DesignPatterns/Factory/: .Factory.d  .Product.d  .main.d  Factory.cpp  Makefile.bak  Product.cpp  main.cpp
Makefile/: Makefile  Makefile.c_c++  Makefile.dynamic  Makefile.exec  Makefile.static
acm/HDU/: 1001.cpp  1002.cpp  1003.cpp  1004.cpp  1005.cpp  1006.cpp  1007.cpp  1008.cpp  1009.cpp  1012.cpp  1013.cpp  1014.cpp  1015.cpp  1016.cpp  1017.cpp  1019.cpp  1020.cpp  1021.cpp  1022.cpp  1023.cpp  1024.cpp  1025.cpp  1026.cpp  1027.cpp  1028.cpp  1029.cpp  1030.cpp  1031.cpp  1032.cpp  1033.cpp  1034.cpp  1035.cpp  1036.cpp  1037.cpp  1038.cpp  1039.cpp  1040.cpp  1041.cpp  1058.cpp  1061.cpp  (+19 more)
autotool/dinnersuite-0.0.1/: Makefile  config.cache  config.status
autotool/helloword/: Makefile  Makefile.in  config.h  config.status  configure  configure.in
autotool/helloword/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
autotool/helloword/src/: Makefile  Makefile.in  hello  hello.c
autotool/helloword/src/.deps/: hello.Po
autotool/network/sockopt/: Makefile  Makefile.am  Makefile.in  confdefs.h  config.h  config.h.in~  config.status  configure  configure.in  configure.scan
autotool/network/sockopt/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
autotool/network/sockopt/src/: Makefile.am  configure.in  sockopt.c
autotool/network/sockopt/unp/: Makefile.am  configure.in
base64/: Makefile  base64.c  base64.h  base64_test.c
cgi/buddy-demo/: Makefile
cgi/buddy_test/: Makefile  config.h.in  config.h.in~  configure  configure.ac  systeminfo.c  systeminfo.cgi  test.pl
cgi/buddy_test/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
cgi/buddy_test/src/: Makefile.am  Makefile.in  main.c
cgi/buddy_test/src/config/: Makefile  Makefile.in
cgi/buddy_test/src/download/: Makefile  Makefile.in
cgi/buddy_test/src/file/: Makefile  Makefile.in
cgi/buddy_test/src/service/: Makefile  Makefile.in
cgi/buddy_test/src/sysinfo/: Makefile.am  Makefile.in
cgi/cgitest/: .depend  Makefile  cookie-read.pl  cookie-test.pl  helloworld.c  helloworld.cgi  helloworld.pl
cgi/perl/: library.xml  list.pl  outfile  studdy.pl  xml.pl
cgi/systeminfo/: systeminfo.pl
cgi/userAdvice/: printenv.pl  userAdvice.html  userAdvice.pl
disqvfb3/: disqvfb
framebuffer4/: Makefile  framebuffer  tags
gcov/: Makefile  func.c  func.h  test.c
libxml2/xmlread/: CreatedXml.xml  Makefile  xmlread.c  xmlreadtest
libxml2/xmlwrite/: Makefile  xmlwrite.c  xmlwritetest
linux_driver/aio_test/: Makefile  aio_test.c
linux_driver/driver_test/: test.c
linux_driver/globalfifo/: Makefile  globalfifo.c
linux_driver/globalmem/: Makefile  globalmem.c
linux_driver/hello_world/: Makefile  hello.c
linux_driver/scull/: scull.c  scull_load.sh
linux_driver/scull_new/: Makefile  scull.c  scull.h  scull_load.sh  scull_unload.sh
linux_driver/second_dev/: Makefile  second_dev.c
shell/: maketar  mytar.sh  shellvar.sh  test1.sh  test2.sh
work1/: Draw_function.h  Makefile  draw.c  main.c  point.c  test.c  ziku.h
(+165 files in other folders)
