#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(unp.c)
AM_INIT_AUTOMAKE(libunp, 0.0.1)
AM_PROG_LITOOL
AC_PROG_INSTALL
#AC_CONFIG_SRCDIR([unp.c])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_LANG_C
AC_PROG_SET
AC_HEADER_STDC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.

AC_OUTPUT(Makefile)
